cabal-version:      3.0
name:               hero-sdl2
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Simon Reitinger
maintainer:          

-- A copyright notice.
-- copyright:
category:           Graphics
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        Hero.SimpleRender

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.0.0,
        sdl2,
        hero,
        containers,
        vector,
        text,
        linear,
        optics-core
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedLabels

executable example
    main-is: Main.hs
    hs-source-dirs: example
    build-depends: base ^>=4.16.0.0, hero, hero-sdl2, linear, optics-core
    default-language: GHC2021
    default-extensions:
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedLabels