cabal-version:      3.0
name:               hero-sdl2
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Simon Reitinger
maintainer:          

-- A copyright notice.
-- copyright:
category:           Graphics
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        Hero.SDL2.Render
        Hero.SDL2.Input

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.0.0,
        sdl2,
        sdl2-gfx,
        sdl2-image,
        hero,
        containers,
        vector,
        text,
        linear,
        optics-core
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedLabels

executable rotating-shapes
    main-is: Main.hs
    hs-source-dirs: examples/rotating-shapes
    build-depends: base ^>=4.16.0.0, hero, hero-sdl2, linear, optics-core
    default-language: GHC2021
    default-extensions:
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedLabels

executable image-rendering
    main-is: Main.hs
    hs-source-dirs: examples/image-rendering
    build-depends: base ^>=4.16.0.0, hero, hero-sdl2, linear, optics-core
    default-language: GHC2021
    default-extensions:
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedLabels

executable move-shape
    main-is: Main.hs
    hs-source-dirs: examples/move-shape
    build-depends: base ^>=4.16.0.0, hero, hero-sdl2, linear, optics-core
    default-language: GHC2021
    default-extensions:
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedLabels